--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ Documentation = "https://github.com/BigStationW/ComfyUi-TextEncodeQwenImageEditA
 "Bug Tracker" = "https://github.com/BigStationW/ComfyUi-TextEncodeQwenImageEditAdvanced/issues"
 
 [tool.comfy]
-PublisherId = ""
+PublisherId = "bigstationw"
 DisplayName = "ComfyUi-TextEncodeQwenImageEditAdvanced"
 Icon = ""
 includes = [] 
